--- a/style.css
+++ b/style.css
@@ -1174,5 +1174,19 @@ body {
   color: #6A6457;
 }
 
+.content-area {
+  flex: 1;             /* 슬라이드바 제외 나머지 전체 차지 */
+  padding: 30px;
+  background-color: white;
+  overflow-y: auto;    /* 내용 많아지면 스크롤 */
+  box-sizing: border-box;
+}
+.layout {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+
+
 
 
